<resources>
    <string name="app_name">MoreauOenologieApp</string>
    <string name="title_faq">FAQ</string>
    <string name="title_calcul">Calcul</string>
    <string name="title_chat">Chat</string>
    <string name="title_resultat">Résultat</string>

    <string name="fragment_faq_title">Ceci est le fragment FAQ</string>
    <string name="fragment_calcul_title">Ceci est le fragment Calcul</string>
    <string name="fragment_chat_title">Ceci est le fragment Chat</string>
    <string name="fragment_resultat_title">Ceci est le fragment Résultat</string>

    <string-array name="arrayMasses">
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>t</item>
    </string-array>

    <string-array name="arrayVolumes">
        <item>mL</item>
        <item>cL</item>
        <item>L</item>
        <item>hL</item>
        <item>Pieces</item>
    </string-array>

    <string-array name="arrayCm1">
        <item>g/hL</item>
        <item>g/Pcs</item>
    </string-array>

    <string-array name="arrayCm2">
        <item>kg/hL</item>
        <item>g/hL</item>
        <item>mg/hL</item>
    </string-array>

    <string-array name="arrayCv1">
        <item>cL/hL</item>
        <item>cL/Pcs</item>
    </string-array>

    <string-array name="arrayCv2">
        <item>L/hL</item>
        <item>cL/hL</item>
        <item>mL/hL</item>
    </string-array>


    <!-- taux pour convertir 1 gramme en la masse -->
    <string-array name="arrayTauxMasses">
        <item>0.001</item>
        <item>1</item>
        <item>1000</item>
        <item>1000000</item>
    </string-array>

    <!-- taux pour convertir 1 litre en le volume -->
    <string-array name="arrayTauxVolumes">
        <item>0.001</item>
        <item>0.01</item>
        <item>1</item>
        <item>100</item>
        <item>228</item>
    </string-array>

    <string-array name="arrayTauxCm1">
        <item>2.28</item>
        <item>1</item>
    </string-array>

    <string-array name="arrayTauxCm2">
        <item>1000</item>
        <item>1</item>
        <item>0.001</item>
    </string-array>

    <string-array name="arrayTauxCv1">
        <item>1</item>
        <item>0.001</item>
        <item>0.000001</item>
    </string-array>

    <string-array name="arrayTauxCv2">
        <item>2.28</item>
        <item>1</item>
    </string-array>

    <string-array name="arrayVolumeCuve">
        <item>hL</item>
        <item>Pieces</item>
    </string-array>

    <string-array name="arrayContrationSulfitage">
        <item>5%</item>
        <item>10%</item>
    </string-array>

    <string-array name="arrayTauxContrationSulfitage">
        <item>0.1</item>
        <item>0.05</item>
    </string-array>

    <!--  FAQ  -->
    <string name="vinification">VINIFICATON</string>
    <string name="sucres">Mes sucres ralentissent, que faire?</string>
    <string name="fermentationAlcoolique">Ma fermentation alcoolique s\'est arrêtée, quels sont les risques et que dois-je faire?</string>
    <string name="debutFermentation">En début de fermentatation, mon vin sent l\'acétate, l\'acétone, le vernis à ongle, que faire?</string>

    <string name="elevage">ELEVAGE</string>
    <string name="bretts">Mon vin est contaminé par des Bretts, que faire?</string>
    <string name="huile">Mon vin est huileux, que faire?</string>
    <string name="fml">La FML ne démarre pas, que faire?</string>
    <string name="aciditeVolatile">L\'acidité volatile de mon vin augmente, que faire?</string>
    <string name="noix">Mon vin sent la noix, pourquoi et quoi faire?</string>
    <string name="moisi">Mon vin sent le champignon/moisi, que faire?</string>
    <string name="doseS02">Quel dose de SO<sub>2</sub> libre maintenir pendant l\'élevage?</string>
    <string name="s02Actif">Qu\'est ce que le SO<sub>2</sub> actif? et comment le gérer?</string>

    <string name="preparationALaMise">MISE EN BOUTEILLE</string>
    <string name="proteines">Mon vin contient des protéines, quel collage est le plus adapté?</string>
    <string name="mesureOxygene">Quel est l\'intéret de mesurer l\'oxygène dissous avant mise en bouteille?</string>
    <string name="illiminerOxygene">Comment illiminer l\'oxygène dissous dans mon vin?</string>

    <string name="vinbio">VIN BIO</string>
    <string name="questionBio">Comment connaître les produits oenologiques autorisés en bio pour le vin?</string>

    <string name="effervescent">VIN EFFERVESCENT</string>
    <string name="questionEffervescent">Mes bouteilles de champagne/crémant gerbent au dégorgement, que faire?</string>

    <string name="liquoreux">VIN LIQUOREUX</string>
    <string name="questionLiquoreux">Mon vin liquoreux refermente en bouteille, que dois-je faire?</string>


    <!-- Calcul -->

    <string name="textAjoutNb">NB: Se référer aux fiches techniques et à la reglementation en vigueur</string>
    <string name="textAjoutVolumetraiter">Volume à traiter</string>
    <string name="textAjoutValeur">Valeur</string>
    <string name="textAjoutHl">hL</string>
    <string name="textSolide">Solide</string>
    <string name="textLiquide">Liquide</string>
    <string name="textMasse">Masse</string>
    <string name="textResultat">Résultat</string>
    <string name="textValeur1">Valeur 1</string>
    <string name="textValeur2">Valeur 2</string>
    <string name="textVolume">Volume</string>
    <string name="textConvCm">Concentrations massiques</string>
    <string name="textConvCv">Concentrations volumiques</string>
    <string name="textSulfVolumeCuve">Volume cuve</string>
    <string name="textSulfSo2Ini">SO<sub>2</sub> Libre Initial</string>
    <string name="textSulfSo2Final">SO<sub>2</sub> Final Souhaité</string>
    <string name="textSulfConcentration">Concentration</string>
    <string name="textSulfQuantite">Quantité</string>
    <string name="textCalcul">OUTILS</string>
    <string name="textCalcul1">Outils</string>
    <string name="textAjout">Ajout</string>
    <string name="textConversion">Conversion</string>
    <string name="textSulfitage">Sulftitage</string>

    <string name="textChat">Lancer le chat</string>

    <!-- sign up -->
    <string name="signUpEmail">nouvelle adresse email</string>
    <string name="signUpDomain">Entrer un domaine</string>
    <string name="signUpMembre">Est membre de la société</string>
    <string name="signUpPassword">Nouveau mot de passe</string>
    <string name="signUpPasswordOeno">Mot de passe</string>
    <string name="signUp">Créer un compte</string>
    <string name="verifiedEmail">Email de vérification envoyé à</string>
    <string name="errorVerrifiedEmail">impossible d\'envoyer l\'email de vérification</string>
    <string name="errorSignUp">Impossible de créer le nouveau compte</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">nom</string>
    <string name="signUpInscription">Inscription</string>

    <!-- log in and sign up-->
    <string name="required">requis</string>
    <string name="connexion">Se connecter au chat</string>
    <string name="loading">Chargement</string>
    <string name="loginButton">Connexion</string>
    <string name="create">créer un compte</string>
    <string name="logInEmail">entrer une adresse email</string>
    <string name="logInPassword">entrer un mot de passe</string>

</resources>

            <!--        -->
