<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signUpInscription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="30sp"
                android:textStyle="bold"
                android:hint="@string/signUpInscription" />

            <EditText
                android:id="@+id/signUpFieldFirstName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/firstName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signUpFieldLastName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/lastName"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/signUpFieldEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/signUpEmail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/signUpFieldPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/signUpPassword"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signUpFieldDomain"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/signUpDomain"
                android:inputType="text" />


            <CheckBox
                android:id="@+id/signUpCheckBoxIsOeno"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/signUpMembre" />
            <EditText
                android:id="@+id/signUpFieldPasswordOeno"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:hint="@string/signUpPasswordOeno"
                android:inputType="text" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/signUp" />
        </LinearLayout>

</android.support.constraint.ConstraintLayout>


