<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/champs">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/elevage"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonbretts"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/bretts"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/buttonaciditeVolatile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/aciditeVolatile"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/buttonmoisi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/moisi"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/buttons02Actif"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/s02Actif"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/buttondoseS02"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/doseS02"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/buttonnoix"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/noix"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/buttonfml"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/fml"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Button
                android:id="@+id/buttonhuile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/huile"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>