<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="4">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<TextView
			android:id="@+id/titleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="email, password" />

	</LinearLayout>


	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center_vertical">

		<LinearLayout
			android:id="@+id/logiInForm"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingLeft="16dp"
			android:paddingRight="16dp">

			<EditText
				android:id="@+id/logInFieldEmail"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:hint="@string/logInEmail"
				android:inputType="textEmailAddress" />

			<EditText
				android:id="@+id/logInFieldPassword"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:hint="@string/logInPassword"
				android:inputType="textPassword" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/emailPasswordButtons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/emailPasswordFields"
			android:orientation="horizontal"
			android:paddingLeft="16dp"
			android:paddingRight="16dp">

			<Button
				android:id="@+id/logInButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text=   "@string/loginButton"/>

			<Button
				android:id="@+id/logInCreateAccountButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/create" />
		</LinearLayout>
	</RelativeLayout>

</LinearLayout>
