<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/champs">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.7"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/preparationALaMise"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonproteines"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:alpha="0.75"
                android:text="@string/proteines"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonmesureOxygene"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.75"
                android:layout_weight="1"
                android:text="@string/mesureOxygene"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonilliminerOxygene"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.75"
                android:layout_weight="1"
                android:text="@string/illiminerOxygene"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>